fix: do not display hsare button text on mobile

--- a/src/app/blog/blog-content/blog-content.component.scss
+++ b/src/app/blog/blog-content/blog-content.component.scss
@@ -79,7 +79,8 @@ span.image > img.thumbnail {
     z-index: 1;
     padding: 0 35px;
 
-    > h3 {
+    > h2,
+    h3 {
       display: none;
     }
 
